header done, dot + our services to do

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,18 +1,2 @@
-.menu {
-    a {
-        color:purple;
-    }
-}
-section {
-    div + p {
-        font-size: 30px;
-    }
-}
-aside {
-    a:hover {
-        color:inherit
-    } 
-}
-tr {
-    background-color: blue;
-}
+@import './base.scss';
+@import './layouts/layouts.scss';
